--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: ENV["AWS_ACCESS_KEY_ID"]
-  secret_access_key: ENV["AWS_SECRET_ACCESS_KEY"]
-  region: ap-northeast-1
-  bucket: catsaver-production
+  access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
+  region: "ap-northeast-1"
+  bucket: <%= ENV["AWS_BUCKET"] %>
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
